# elephantroboticmyAGVcode

./: README.md
aibot/: map.pgm
aibot/aibot_description/..git/: config  index  packed-refs
aibot/aibot_description/..git/logs/refs/remotes/origin/: HEAD
aibot/aibot_description/..git/objects/pack/: pack-cfbca6cdd705d69b7c0b1bfe1e4a8521cdc92bdf.idx
aibot/aibot_description/..git/refs/heads/: master
aibot/aibot_hw/..git/: config  index  packed-refs
aibot/aibot_hw/..git/logs/: HEAD
aibot/aibot_hw/..git/refs/heads/: master
aibot/aibot_moveit/: .setup_assistant  CMakeLists.txt  package.xml
aibot/aibot_moveit/config/: aibot_a1_mycobot.srdf  fake_controllers.yaml  ros_controllers.yaml
aibot/aibot_moveit/launch/: aibot_a1_mycobot_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
aibot/aibot_msgs/..git/: COMMIT_EDITMSG  config  index  packed-refs
aibot/aibot_msgs/..git/logs/refs/heads/: master
aibot/aibot_msgs/..git/logs/refs/remotes/origin/: HEAD  master
aibot/aibot_msgs/..git/refs/tags/: v1.0
aibot/aibot_waypoint_global_planner/: CMakeLists.txt  aibot_waypoint_panel_plugin.xml  aibot_waypoint_plugin.xml  package.xml
aibot/aibot_waypoint_global_planner/..git/: COMMIT_EDITMSG  config  index
aibot/aibot_waypoint_global_planner/..git/logs/: HEAD
aibot/aibot_waypoint_global_planner/..git/logs/refs/remotes/origin/: master
aibot/aibot_waypoint_global_planner/..git/refs/heads/: master
aibot/aibot_waypoint_global_planner/config/: base_global_planner_params.yaml
aibot/aibot_waypoint_global_planner/include/aibot_waypoint_global_planner/: aibot_waypoint_global_planner.h
aibot/aibot_waypoint_global_planner/src/: aibot_waypoint_global_planner.cpp  aibot_waypoint_panel.cpp  aibot_waypoint_panel.h
aibot/navigation_demo/..git/: config  index  packed-refs
aibot/navigation_demo/..git/logs/: HEAD
aibot/navigation_demo/..git/refs/heads/: master
aibot/navigation_demo/launch/: murase_navi.launch  murase_navi0.launch  navigation.launch
aibot/navigation_demo/maps/: SRDlab_new.pgm  SRDlab_new.yaml
aibot/navigation_demo/rviz/: navigation.rviz
myAGV_motion_control/: CMakeLists.txt  package.xml
myAGV_motion_control/launch/: detect_marker.launch
myAGV_motion_control/scripts/: detect_marker.py
